--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,9 @@ Markdown==2.6.2
 MarkupSafe==0.23
 micawber==0.3.2
 peewee==2.6.1
+pyembed==1.1.2
+pyembed-markdown==1.1.0
+PyYAML==3.11
+requests==2.7.0
 Werkzeug==0.10.4
 wheel==0.24.0
